# llvm-pim-passes

./: CMakeLists.txt  README.md
def-use/: CMakeLists.txt  def-use.cc
dg-def-use/: CMakeLists.txt  dg-def-use.cc
dg-test/: CMakeLists.txt  dg-test.cc
ld-ld-op-st/: CMakeLists.txt  ld-ld-op-st.cc
old-passes/add/: CMakeLists.txt  add.cpp
old-passes/andi/: andi.cpp
old-passes/dce1/: dce1.cpp
old-passes/defuse/: CMakeLists.txt  defuse.cpp
old-passes/in_mem_compute_replace/: CMakeLists.txt  in_mem_compute_replace.cpp  in_mem_compute_replace.cpp_golden
old-passes/nandi/: CMakeLists.txt
old-passes/new_instruction_learn/: CMakeLists.txt
old-passes/opcode_count/: CMakeLists.txt
old-passes/ori/: CMakeLists.txt  ori.cpp
pim-pass/: CMakeLists.txt  pim-pass.cc
pim-subgraphs/: CMakeLists.txt  pim-subgraphs.cc
srivatsa_transforms/: CMakeLists.txt
srivatsa_transforms/andi/: CMakeLists.txt
srivatsa_transforms/check_for_inmem/: check_for_inmem.cpp
srivatsa_transforms/dce1/: CMakeLists.txt
srivatsa_transforms/in_mem_compute_replace/: in_mem_compute_replace.cpp_workingpartially  in_mem_compute_replace.cpp_workingpartiallyjash
srivatsa_transforms/instr_count/: CMakeLists.txt  instr_count.cpp
srivatsa_transforms/nandi/: nandi.cpp
srivatsa_transforms/new_instruction_learn/: new_instruction_learn.cpp
srivatsa_transforms/opcode_count/: opcode_count.cpp
test-module-pass/: CMakeLists.txt  test-module-pass.cc
util/: CMakeLists.txt
util/offloadable-instructions/: CMakeLists.txt  offloadable-instructions.cc  offloadable-instructions.h
util/pim-instructions-flag/: CMakeLists.txt  pim-instructions-flag.cc  pim-instructions-flag.cpp  pim-instructions-flag.h
