#add_subdirectory(add)
#add_subdirectory(andi)
add_subdirectory(check_for_inmem)
#add_subdirectory(dce1)
#add_subdirectory(defuse)
#add_subdirectory(in_mem_compute_replace)
#add_subdirectory(instr_count)
#add_subdirectory(nandi)
#add_subdirectory(new_instruction_learn)
#add_subdirectory(opcode_count)
#add_subdirectory(ori)
